# saltflake

./: .clang-format  CMakeLists.txt  README.md  byteswap_compat.h  saltflake.cpp  saltflake.h  saltflakeimpl.cpp  saltflakeimpl.h
.github/workflows/: main.yml
src/: CMakeLists.txt  saltflake.cpp  saltflake.h  saltflakeimpl.cpp  tcb_span.h
src/io/: messageparser.cpp  messageparser.h  pipe.cpp  pipe.h  server.cpp  server.h
tests/: CMakeLists.txt  saltflake.t.cpp  saltflakeimpl.t.cpp  server.t.cpp  testclient.h
